[workspace]
members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/*",
    "crates/clients/*", 
    "examples/*",
    "crates/notifiers/*", 
    "crates/common",
]

default-members = ["bin/artemis", "bin/cli", "examples/mev-share-arb"]

[workspace.dependencies]
## eth
ethers = { version = "2", features = ["ws", "rustls"]}
ethers-signers = "2.0"


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

